scrollbar overflow issue

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -56,5 +56,5 @@
   height: 100vh;
   overflow-y: auto;
   flex: 1;
-  max-width: 1500px;
+
 }
